fix clients on mobile

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -692,10 +692,12 @@ figure {
 .clients {
 	display: flex;
 	align-items: center;
-	margin-bottom: 40px;
+	flex-wrap: wrap;
+	justify-content: center;
 	img, svg {
 		filter: grayscale(100%) contrast(20%) brightness(90%);
 		height: 60px;
+		margin-bottom: 40px;
 	}
 	a:hover img, a:hover svg {
 		filter: none;
